# inscription_board

./: CMakeLists.txt  README.md  main.cpp  main.qml  maincontroller.cpp  maincontroller.h  qml.qrc
model/: databasemanager.cpp  databasemanager.h  enums.cpp  enums.h  mainlistmodel.cpp  mainlistmodel.h  registration.cpp  registration.h
viewModel/: mainlistmodel.cpp  mainlistmodel.h
